My Initial Commit

--- a/app/src/main/res/layout/fragment_gdg_list.xml
+++ b/app/src/main/res/layout/fragment_gdg_list.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
+        xmlns:tools="http://schemas.android.com/tools"
+    tools:context="maxeem.america.gdg.search.GdgListFragment">
 
     <data>
 
         <variable
                 name="viewModel"
-                type="com.example.android.gdgfinder.search.GdgListViewModel" />
+                type="maxeem.america.gdg.search.GdgListViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:context="com.example.android.gdg.MainActivity">
+            android:layout_height="match_parent">
 
         <HorizontalScrollView
                 android:id="@+id/chips"
