--- a/app/src/main/res/layout/add_gdg_fragment.xml
+++ b/app/src/main/res/layout/add_gdg_fragment.xml
@@ -2,20 +2,20 @@
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
+        xmlns:tools="http://schemas.android.com/tools"
+        tools:context="maxeem.america.gdg.add.AddGdgFragment">
 
     <data>
 
         <variable
                 name="viewModel"
-                type="com.example.android.gdgfinder.add.AddGdgViewModel"/>
+                type="maxeem.america.gdg.add.AddGdgViewModel"/>
     </data>
     <ScrollView android:layout_height="match_parent"
                 android:layout_width="match_parent">
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                tools:context=".add.AddGdgFragment">
+                android:layout_height="wrap_content">
 
             <TextView
                     android:id="@+id/textViewIntro"
