--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
+
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
+
     <androidx.drawerlayout.widget.DrawerLayout
             android:id="@+id/drawer_layout"
             android:layout_height="match_parent"
@@ -12,17 +15,20 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-            <androidx.appcompat.widget.Toolbar
+            <com.google.android.material.appbar.MaterialToolbar
+                    style="@style/Widget.MaterialComponents.Toolbar.Primary"
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize">
-                <ImageView
+                    android:layout_height="wrap_content">
+
+                <androidx.appcompat.widget.AppCompatImageView
                         android:id="@+id/hero_image"
                         android:layout_width="150dp"
-                        android:layout_height="match_parent"
+                        android:layout_height="?attr/actionBarSize"
                         app:srcCompat="@drawable/logo"
                         android:contentDescription="@string/app_name"/>
-            </androidx.appcompat.widget.Toolbar>
+
+            </com.google.android.material.appbar.MaterialToolbar>
 
             <fragment
                     android:id="@+id/nav_host_fragment"
@@ -31,6 +37,7 @@
                     android:layout_height="match_parent"
                     app:defaultNavHost="true"
                     app:navGraph="@navigation/nav_graph"/>
+
         </LinearLayout>
 
         <com.google.android.material.navigation.NavigationView
@@ -39,5 +46,7 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="start"
                 app:menu="@menu/drawer_view"/>
+
     </androidx.drawerlayout.widget.DrawerLayout>
+
 </layout>
