--- a/app/src/main/res/layout/add_gdg_fragment.xml
+++ b/app/src/main/res/layout/add_gdg_fragment.xml
@@ -3,16 +3,15 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        tools:context="maxeem.america.gdg.add.AddGdgFragment">
+        tools:context=".add.AddGdgFragment">
 
     <data>
-
-        <variable
-                name="viewModel"
-                type="maxeem.america.gdg.add.AddGdgViewModel"/>
+        <variable name="viewModel" type="maxeem.america.gdg.add.AddGdgViewModel"/>
     </data>
+
     <ScrollView android:layout_height="match_parent"
                 android:layout_width="match_parent">
+
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -24,11 +23,11 @@
                     android:text="@string/add_gdg"
                     android:textColor="#AAAAAA"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="16dp"
+                    android:layout_marginStart="@dimen/spacing_normal"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="16dp"
+                    android:layout_marginEnd="@dimen/spacing_normal"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginTop="16dp"/>
+                    android:layout_marginTop="@dimen/spacing_normal"/>
 
             <ImageView
                     android:id="@+id/imageView"
@@ -121,7 +120,7 @@
             <!--android:orientation="vertical"-->
             <!--app:layout_constraintStart_toStartOf="@+id/EditTextRegion"-->
             <!--app:layout_constraintEnd_toEndOf="@+id/EditTextRegion"-->
-            <!--android:layout_marginTop="16dp"-->
+            <!--android:layout_marginTop="@dimen/spacing_normal"-->
             <!--app:layout_constraintBottom_toTopOf="@+id/button"-->
             <!--android:layout_marginBottom="8dp">-->
 
@@ -130,7 +129,7 @@
                     android:text="@string/motivation"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="@dimen/spacing_normal"
                     android:layout_marginStart="32dp"
                     app:layout_constraintTop_toBottomOf="@+id/EditTextRegion"
                     android:layout_marginBottom="1dp"
@@ -156,7 +155,7 @@
 
             <Button
                     android:id="@+id/button"
-                    android:text="Ok"
+                    android:text="@string/okay"
                     android:layout_width="40dp"
                     android:layout_height="24dp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -168,6 +167,9 @@
                     android:layout_marginBottom="12dp"
                     android:layout_marginEnd="40dp"
                     android:onClick="@{() -> viewModel.onSubmitApplication()}"/>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
+
     </ScrollView>
+
 </layout>
