--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -1,93 +1,160 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
+
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="maxeem.america.gdg.home.HomeFragment">
+    
+    <data>
+        <variable name="viewModel" type="maxeem.america.gdg.home.HomeViewModel"/>
+    </data>
+    
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <com.google.android.material.appbar.AppBarLayout
+            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
+            android:id="@+id/appbar"
+            app:liftOnScroll="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:id="@+id/colToolbar"
+                app:title="@string/about_google_developer_groups"
+                app:expandedTitleTextAppearance="?textAppearanceHeadline6"
+                app:collapsedTitleTextAppearance="?textAppearanceHeadline5"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                app:expandedTitleGravity="top"
+                app:collapsedTitleGravity="start|center_vertical"
+                app:contentScrim="#55000000"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_collapseMode="parallax"
+                    app:layout_collapseParallaxMultiplier=".5"
+                    android:clipToPadding="true">
+
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/img"
+                        app:srcCompat="@drawable/behind"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:scaleType="centerCrop"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintDimensionRatio="4:3" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <com.google.android.material.appbar.MaterialToolbar
+                    android:theme="@style/Expressive"
+                    android:id="@+id/toolbar"
+                    app:titleTextColor="?colorOnPrimary"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    app:layout_collapseMode="pin" />
+
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <androidx.core.widget.NestedScrollView
+            android:id="@+id/scroll"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            android:scrollbarStyle="insideOverlay"
+            android:scrollbars="vertical"
+            android:requiresFadingEdge="vertical"
+            android:fadingEdgeLength="20dp"
             android:layout_height="match_parent"
-            android:layout_width="match_parent"
-        tools:context="maxeem.america.gdg.home.HomeFragment">
+            android:layout_width="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="@dimen/spacing_normal"
+                android:clipToPadding="true">
+
+                <TextView
+                    android:id="@+id/intro_text"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="@string/gdg_description_long"
+                    android:textAppearance="?textAppearanceBody2"
+                    app:layout_constraintEnd_toStartOf="@+id/end_grid"
+                    app:layout_constraintStart_toStartOf="@+id/start_grid"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:textAppearance="?textAppearanceHeadline6"
+                    android:id="@+id/subtitle"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="13dp"
+                    android:text="@string/gdgs_are"
+                    app:layout_constraintEnd_toStartOf="@id/end_grid"
+                    app:layout_constraintStart_toEndOf="@id/start_grid"
+                    app:layout_constraintTop_toBottomOf="@+id/intro_text" />
+
+                <TextView
+                    android:textAppearance="?textAppearanceBody2"
+                    android:id="@+id/description"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/gdg_description_bullets"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@id/subtitle"
+                    app:layout_constraintStart_toStartOf="@+id/start_grid"
+                    app:layout_constraintEnd_toStartOf="@+id/end_grid"/>
+
+                <ImageView
+                    android:id="@+id/end_image"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:scaleType="centerCrop"
+                    android:layout_marginTop="@dimen/spacing_normal"
+                    app:srcCompat="@drawable/wtm"
+                    app:layout_constraintTop_toBottomOf="@id/description"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintDimensionRatio="3:1.5"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/start_grid"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintGuide_begin="@dimen/spacing_normal"
+                    android:orientation="vertical"/>
+
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/end_grid"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintGuide_end="@dimen/spacing_normal" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.core.widget.NestedScrollView>
+
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingBottom="16dp"
-            android:clipToPadding="true">
+            android:onClick="@{ ()-> viewModel.onFabClicked() }"
+            app:icon="@drawable/ic_gdg"
+            android:text="@string/app_name"
+            android:layout_margin="24dp"
+            android:layout_gravity="bottom|end"/>
 
-        <ImageView
-                android:id="@+id/image"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                app:srcCompat="@drawable/behind"
-                android:scaleType="centerCrop"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintDimensionRatio="4:3"/>
-
-        <TextView
-                android:id="@+id/title"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="@string/about_google_developer_groups"
-                android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@id/image"
-                app:layout_constraintEnd_toStartOf="@+id/end_grid"
-                app:layout_constraintStart_toStartOf="@+id/start_grid"/>
-
-        <TextView
-                android:id="@+id/intro_text"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/title"
-                app:layout_constraintStart_toStartOf="@+id/start_grid"
-                app:layout_constraintEnd_toStartOf="@+id/end_grid"
-                android:text="@string/gdg_description_long"
-                android:layout_marginTop="8dp"/>
-
-        <TextView
-                android:id="@+id/subtitle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="@string/gdgs_are"
-                android:layout_marginTop="13dp"
-                app:layout_constraintStart_toEndOf="@id/start_grid"
-                app:layout_constraintEnd_toStartOf="@id/end_grid"
-                app:layout_constraintTop_toBottomOf="@+id/intro_text"/>
-
-        <TextView
-                android:id="@+id/description"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="@string/gdg_description_bullets"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@id/subtitle"
-                app:layout_constraintStart_toStartOf="@+id/start_grid"
-                app:layout_constraintEnd_toStartOf="@+id/end_grid"/>
-
-        <ImageView
-                android:id="@+id/end_image"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:scaleType="centerCrop"
-                android:layout_marginTop="16dp"
-                app:srcCompat="@drawable/wtm"
-                app:layout_constraintTop_toBottomOf="@id/description"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintDimensionRatio="3:1.5"
-                app:layout_constraintBottom_toBottomOf="parent"/>
-
-        <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/start_grid"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintGuide_begin="16dp"
-                android:orientation="vertical"/>
-
-        <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/end_grid"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_end="16dp"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    
+</layout>
