--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -5,18 +5,22 @@
             app:startDestination="@id/home">
 
     <fragment
-            android:id="@+id/gdg_search"
-            android:name="maxeem.america.gdg.search.GdgListFragment"
-            android:label="GDG Search"
-    >
-    </fragment>
-    <fragment android:id="@+id/home" android:name="maxeem.america.gdg.home.HomeFragment"
-              android:label="Home" tools:layout="@layout/home_fragment">
+        android:id="@+id/home"
+        android:name="maxeem.america.gdg.home.HomeFragment"
+              tools:layout="@layout/home_fragment">
         <action android:id="@+id/action_homeFragment_to_gdgListFragment" app:destination="@id/gdg_search"/>
         <action android:id="@+id/action_homeFragment_to_addGdgFragment" app:destination="@id/gdg_apply"/>
     </fragment>
-    <fragment android:id="@+id/gdg_apply" android:name="maxeem.america.gdg.add.AddGdgFragment"
-              android:label="Apply" tools:layout="@layout/add_gdg_fragment"/>
+
+    <fragment
+        android:id="@+id/gdg_search"
+        android:name="maxeem.america.gdg.search.GdgListFragment"
+            tools:layout="@layout/fragment_gdg_list"/>
+
+    <fragment
+        android:id="@+id/gdg_apply"
+        android:name="maxeem.america.gdg.add.AddGdgFragment"
+            tools:layout="@layout/add_gdg_fragment"/>
 
     <!--<fragment-->
             <!--android:id="@+id/gdgDetailFragment"-->
