--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,34 +2,36 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/nav_graph"
-            app:startDestination="@id/home">
+            app:startDestination="@id/fragmentHome">
 
     <fragment
-        android:id="@+id/home"
-        android:name="maxeem.america.gdg.home.HomeFragment"
-              tools:layout="@layout/home_fragment">
-        <action android:id="@+id/action_homeFragment_to_gdgListFragment" app:destination="@id/gdg_search"/>
-        <action android:id="@+id/action_homeFragment_to_addGdgFragment" app:destination="@id/gdg_apply"/>
+        android:id="@+id/fragmentHome"
+        android:name="maxeem.america.gdg.ui.HomeFragment"
+        tools:layout="@layout/fragment_home">
+        <action android:id="@+id/action_homeFragment_to_gdgListFragment" app:destination="@id/fragmentSearch"/>
+        <action android:id="@+id/action_homeFragment_to_addGdgFragment" app:destination="@id/fragmentApply"/>
+        <action
+            android:id="@+id/action_fragmentHome_to_fragmentAbout"
+            app:destination="@id/fragmentAbout" />
     </fragment>
 
     <fragment
-        android:id="@+id/gdg_search"
-        android:name="maxeem.america.gdg.search.GdgListFragment"
-            tools:layout="@layout/fragment_gdg_list"/>
+        android:id="@+id/fragmentSearch"
+        android:name="maxeem.america.gdg.ui.GdgListFragment"
+        tools:layout="@layout/fragment_gdg_list">
+        <action
+            android:id="@+id/action_fragmentSearch_to_fragmentApply"
+            app:destination="@id/fragmentApply" />
+    </fragment>
 
     <fragment
-        android:id="@+id/gdg_apply"
-        android:name="maxeem.america.gdg.add.AddGdgFragment"
-            tools:layout="@layout/add_gdg_fragment"/>
+        android:id="@+id/fragmentApply"
+        android:name="maxeem.america.gdg.ui.AddGdgFragment"
+        tools:layout="@layout/fragment_add_gdg"/>
 
-    <!--<fragment-->
-            <!--android:id="@+id/gdgDetailFragment"-->
-            <!--android:name="maxeem.america.gdg.gdgdetail.GdgDetailFragment"-->
-            <!--android:label="fragment_overview"-->
-            <!--tools:layout="@layout/fragment_gdg_detail" >-->
-        <!--<argument-->
-        <!--android:name="selectedChapter"-->
-        <!--app:argType="maxeem.america.gdg.network.GdgChapter"/>-->
-        <!--<action android:id="@+id/action_gdgDetailFragment_to_gdgListFragment" app:destination="@id/gdgListFragment"/>-->
-    <!--</fragment>-->
+    <fragment
+        android:id="@+id/fragmentAbout"
+        android:name="maxeem.america.gdg.ui.AboutFragment"
+        tools:layout="@layout/fragment_about"/>
+
 </navigation>
