--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,11 @@
 
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowBackground">@drawable/app_splash</item>
+
         <item name="colorPrimary">@color/primaryColor</item>
         <item name="colorPrimaryDark">@color/primaryDarkColor</item>
         <item name="colorPrimaryVariant">@color/primaryLightColor</item>
@@ -10,6 +14,9 @@
         <item name="colorSecondary">@color/secondaryColor</item>
         <item name="colorSecondaryVariant">@color/secondaryDarkColor</item>
         <item name="colorOnSecondary">@color/secondaryTextColor</item>
+
+        <item name="shapeAppearanceSmallComponent">@style/MyShapeAppearanceSmallComponent</item>
+        <item name="shapeAppearanceMediumComponent">@style/MyShapeAppearanceMediumComponent</item>
 
         <item name="textAppearanceHeadline1">@style/MyTextAppearanceHeadline1</item>
         <item name="textAppearanceHeadline2">@style/MyTextAppearanceHeadline2</item>
@@ -24,6 +31,7 @@
         <item name="textAppearanceButton">@style/MyTextAppearanceButton</item>
         <item name="textAppearanceCaption">@style/MyTextAppearanceCaption</item>
         <item name="textAppearanceOverline">@style/MyTextAppearanceOverline</item>
+
     </style>
 
     <style name="Expressive">
@@ -68,6 +76,15 @@
     </style>
     <style name="MyTextAppearanceOverline" parent="TextAppearance.MaterialComponents.Overline">
         <item name="fontFamily">@font/work_sans_semibold</item>
+    </style>
+    <style name="HomeTitle">
+        <item name="android:textColorPrimary">@color/secondaryColor</item>
+    </style>
+    <style name="MyShapeAppearanceSmallComponent" parent="ShapeAppearance.MaterialComponents.SmallComponent">
+        <item name="cornerFamily">cut</item>
+    </style>
+    <style name="MyShapeAppearanceMediumComponent" parent="ShapeAppearance.MaterialComponents.MediumComponent">
+        <item name="cornerFamily">cut</item>
     </style>
 
 </resources>
